Adicionando CSS Externo nas páginas index e contato

--- a/index.html
+++ b/index.html
@@ -4,97 +4,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css.css">
     <title>Grand Theft Auto V</title>
 </head>
 
-<body link="black" alink="black" vlink="black">
-
-    <center>
-        <ul style="display: inline; font-size: 1.3rem; line-height: 2rem;">
-            <font style="font-family:Franklin Gothic Medium">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </font>
+<body>
+    <div class="main-nav">
+        <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
-        <center>
-            <h1>
-                <font style="font-family:Franklin Gothic Medium">Grand Theft Auto V</font>
-            </h1>
+    </div>
+    <h1 class="font-style">Grand Theft Auto V</h1>
 
-            <h3>
-                <font style="font-family:Franklin Gothic Medium">Eleito o melhor jogo de 2013, vamos entender um pouco
-                    melhor este jogo: </br>
-                    Afinal, como é a história do GTA V? </font>
-
-                </p>
-                </br>
-                <font style="font-family:Franklin Gothic Medium"><b>Los Santos</b>: uma vasta metrópole ensolarada
-                    repleta de gurus de autoajuda,
-                    estrelas de cinema e celebridades em decadência, </br> que já foram o orgulho do mundo ocidental e
-                    que agora lutam para se manter em uma
-                    época de incerteza econômica e reality shows baratos.
-                    </p>
-                    Dentro deste cenário, três criminosos muito diferentes entre si planejam suas oportunidades de
-                    sobrevivência e sucesso:
-                    <b>Franklin</b>, um ladrão de rua que busca por boas </br>oportunidades de ganhar muito dinheiro;
-                    <b>Michael</b>, um ex-assaltante
-                    profissional cuja aposentadoria não é bem o mar de rosas que esperava ser; e <b>Trevor</b>, um
-                    maníaco violento que pensa </br> somente
-                    na próxima dose e na bolada que pode ganhar em assaltos. Sem muitas opções, a equipe arrisca tudo em
-                    uma série de assaltos ousados
-                    que podem garantir o resto de suas vidas.
-                    </p>
-                    Grand Theft Auto V transforma a narrativa e a jogabilidade de novas maneiras, com os jogadores
-                    entrando e saindo das vidas dos
-                    três protagonistas do jogo o tempo inteiro, passando por </br> todos os ângulos das suas histórias
-                    interconectadas no mundo aberto mais
-                    dinâmico, o mais variado e mais extenso já desenvolvido até hoje.
-                    </p>
-                    Todas as características clássicas da inovadora série de jogos estão de volta, incluindo a incrível
-                    atenção aos detalhes e o humor
-                    cínico de <b>Grand Theft Auto</b> sobre a cultura </br> moderna, somados a uma nova e ambiciosa
-                    abordagem no modo multijogador de
-                    mundo aberto.
-                    </p>
-                    Desenvolvido pelos criadores da série Rockstar North, Grand Theft Auto V está disponível
-                    mundialmente para PC, PlayStation®4, PlayStation®3, Xbox One e Xbox 360.
-
-                </font>
-            </h3>
-
-            </br>
-
-            <hr style="color: #FCAF17; width: 50%; height: 0.2rem; background-color: #FCAF17;">
-        </center>
-
+    <h3 class="font-style">
+        Eleito o melhor jogo de 2013, vamos entender um pouco
+        melhor este jogo: </br>
+        Afinal, como é a história do GTA V?
         </p>
         </br>
-
-        <img src="gtaVAll.jpg" alt="Michael, Franklin e Trevor segurando objetos" width="900rem" height="550rem" />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="gtaVDog.jpg" alt="Franklin e seu cachorro bravo" width="900rem" height="550rem" />
-
-        </br>
-        </br>
-
-        <img src="gtaVCar.jpg" alt="Michael, Franklin e Trevor segurando objetos" width="900rem" height="550rem" />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <img src="gtaVSport.jpg" alt="Franklin e seu cachorro bravo" width="900rem" height="550rem" />
-        </br>
-
-        </br>
+    </h3>
+    <h3 class="style-text">
+        <b>Los Santos</b>: uma vasta metrópole ensolarada
+        repleta de gurus de autoajuda,
+        estrelas de cinema e celebridades em decadência, </br> que já foram o orgulho do mundo ocidental e
+        que agora lutam para se manter em uma
+        época de incerteza econômica e reality shows baratos.
         </p>
-        <center>
-            <hr style="color: #FCAF17; width: 50%; height: 0.2rem; background-color: #FCAF17;">
+        Dentro deste cenário, três criminosos muito diferentes entre si planejam suas oportunidades de
+        sobrevivência e sucesso:
+        <b>Franklin</b>, um ladrão de rua que busca por boas </br>oportunidades de ganhar muito dinheiro;
+        <b>Michael</b>, um ex-assaltante
+        profissional cuja aposentadoria não é bem o mar de rosas que esperava ser; e <b>Trevor</b>, um
+        maníaco violento que pensa </br> somente
+        na próxima dose e na bolada que pode ganhar em assaltos. Sem muitas opções, a equipe arrisca tudo em
+        uma série de assaltos ousados
+        que podem garantir o resto de suas vidas.
+        </p>
+        Grand Theft Auto V transforma a narrativa e a jogabilidade de novas maneiras, com os jogadores
+        entrando e saindo das vidas dos
+        três protagonistas do jogo o tempo inteiro, passando por </br> todos os ângulos das suas histórias
+        interconectadas no mundo aberto mais
+        dinâmico, o mais variado e mais extenso já desenvolvido até hoje.
+        </p>
+        Todas as características clássicas da inovadora série de jogos estão de volta, incluindo a incrível
+        atenção aos detalhes e o humor
+        cínico de <b>Grand Theft Auto</b> sobre a cultura </br> moderna, somados a uma nova e ambiciosa
+        abordagem no modo multijogador de
+        mundo aberto.
+        </p>
+        Desenvolvido pelos criadores da série Rockstar North, Grand Theft Auto V está disponível
+        mundialmente para PC, PlayStation®4, PlayStation®3, Xbox One e Xbox 360.
+    </h3>
 
-            </p>
-            </br>
+    </br>
 
-            <iframe width="760" height="515" src="https://www.youtube.com/embed/QkkoHAzjnUs" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </center>
-</body>
+    <hr style="color: #FCAF17; width: 50%; height: 0.2rem; background-color: #FCAF17;">
+
+    </p>
+    </br>
+    <div class="flex-container">
+        <img class="img-shadow" src="gtaVAll.jpg" alt="Michael, Franklin e Trevor segurando objetos" />
+        </br>
+        <img class="img-shadow" src="gtaVDog.jpg" alt="Franklin e seu cachorro bravo" />
+    </div>
+
+    <hr style="color: #FCAF17; width: 50%; height: 0.2rem; background-color: #FCAF17;">
+
+    </p>
+    </br>
+    <center>
+        <iframe width="760" height="515" src="https://www.youtube.com/embed/QkkoHAzjnUs" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </center>
+    <div class="footer">
+        <div class="footer-text">
+            Todos os direitos reservados a Bárbara Liboni Guerra &copy;
+        </div>
 </body>
 
 </html>
