--- a/contato.html
+++ b/contato.html
@@ -5,39 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css.css">
+
     <title>Grand Theft Auto V | Contato</title>
 </head>
 
-<body link="black" alink="black" vlink="black">
-    <font style="font-family:Franklin Gothic Medium; text-align: center;">
-        <h1>Contato</h1>
-        <h3>Possui alguma dica, dúvida ou sugestão para melhorar a experiência no site? Contate-nos!
-        </h3>
-        <ul style="display: inline; font-size: 1.3rem; line-height: 2rem;">
+<body>
+    <div class="main-nav">
+        <ul id="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
-    </font>
+    </div>
+    <h1 class="font-style">Contato</h1>
+    <h3 class="font-style">Possui alguma dica, dúvida ou sugestão para melhorar a experiência no site? Contate-nos!
+    </h3>
     </p>
-</br>
-    <center>
-        <form>
-            &nbsp;<label style="font-family:Franklin Gothic Medium; font-size: 1.2rem;" for="nome">Nome: </label>&nbsp;
-            <input style="border-radius: 0.5rem;  border-color: rgba(41, 39, 39, 0.534);" type="text" id="nome">
-            </p>
-            &nbsp;<label style="font-family:Franklin Gothic Medium; font-size: 1.2rem;" for="email">Email:
-            </label>&nbsp;
-            <input style="border-radius: 0.5rem;  border-color: rgba(41, 39, 39, 0.534);" type="text" id="email">
-            </p>
-            <label style="font-family:Franklin Gothic Medium; font-size: 1.2rem;" for="assunto">Assunto: </label>
-            <textarea style="border-radius: 0.5rem;   border-color: rgba(41, 39, 39, 0.534);" name="assunto"
-                id="assunto" cols="60" rows="5"></textarea>
-        </form>
-
+    </br>
+    <form class="form">
+        <label class="form-name" for="nome">Nome: </label>&nbsp;&nbsp;&nbsp;
+        <input class="form-area" type="text" id="nome">
         </p>
-        <button style="border-radius: 0.5rem; border-color: white; padding: 0.5rem; width: 6rem; font-family:Franklin Gothic Medium; 
-        font-size: 1rem; background-color: #FCAF17; color:white; margin-left: 3rem;">Enviar</button>
-    </center>
+        <label class="form-name" for="email">Email:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <input class="form-area" type="text" id="email">
+        </p>
+        <label class="form-name" for="assunto">Assunto: </label>
+        <textarea class="form-area" name="assunto" id="assunto" cols="60" rows="5"></textarea>
+    </form>
+    </p>
+    <center>
+    <button class="button-send">Enviar</button>
+</center>
+    <div class="footer">
+        <div class="footer-text">
+            Todos os direitos reservados a Bárbara Liboni Guerra &copy;
+        </div>
 </body>
 
 </html>
