--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css.css">
+    <link rel="stylesheet" type="text/css" href="assets/css.css">
     <title>Grand Theft Auto V</title>
 </head>
 
@@ -64,9 +64,9 @@
     </p>
     </br>
     <div class="flex-container">
-        <img class="img-shadow" src="gtaVAll.jpg" alt="Michael, Franklin e Trevor segurando objetos" />
+        <img onmousemove="imgZoom()" onmouseout="imgNormal()" id="img" class="img-shadow" src="imgs/gtaVAll.jpg" alt="Michael, Franklin e Trevor segurando objetos" />
         </br>
-        <img class="img-shadow" src="gtaVDog.jpg" alt="Franklin e seu cachorro bravo" />
+        <img onmousemove="imgZoom()" onmouseout="imgNormal()" id="img" class="img-shadow" src="imgs/gtaVDog.jpg" alt="Franklin e seu cachorro bravo" />
     </div>
 
     <hr style="color: #FCAF17; width: 50%; height: 0.2rem; background-color: #FCAF17;">
