Criando funções, eventos e acessando a DOM no js

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="footer-text">
             Todos os direitos reservados a Bárbara Liboni Guerra &copy;
         </div>
+        <script src="assets/script.js"></script>
 </body>
 
 </html>
